Fixes that applies ONLY for uncomposited window Toolbar button radius no longer applies to titlebar button Improve menubar styling (no longer uses ugly text shadow) Address the titlebar -> nav toolbar overlapping when toolbarizer addon is enabled (tradeoff: larger gap when app menu is available) Titlebar border appearance improved
(these changes may not apply to other platform(s))

--- a/src/chrome/browser/browser.css
+++ b/src/chrome/browser/browser.css
@@ -353,6 +353,16 @@
     margin-top: 3px !important;
     margin-bottom: 8px !important;
   }
+
+  /* fix for small gap on tabs to top caption */
+  #navigator-toolbox[tabsontop=true]  #tabbrowser-tabs {
+    margin-top: 6px;
+  }
+  /* nav. toolbox overlaps with window buttons
+  (when toolbarizer is enabled, tradeoff would be larger margin when appmenu is visible) */
+  #navigator-toolbox[tabsontop=false] {
+    padding-top: 11px;
+  }
   
   #appmenu-button:hover:not(:active):not([open]) {
 	background-color: rgba(255,255,255,.3);
@@ -375,6 +385,19 @@
   #main-window[privatebrowsingmode=temporary] #appmenu-button:hover:active,
   #main-window[privatebrowsingmode=temporary] #appmenu-button[open] {
     background-color: rgb(158,2,255);
+  }
+
+  /* use diff. color for private browsing menu item */
+  #main-window[privatebrowsingmode=temporary] menubar > menu {
+    color: white;
+  }
+  
+  #main-window[privatebrowsingmode=temporary] menubar > menu[_moz-menuactive="true"][open="true"] {
+	background: rgba(255, 255, 255, 0.2);
+  }
+
+  #main-window[privatebrowsingmode=temporary] 	menubar > menu[_moz-menuactive="true"]:not([disabled="true"]) {
+	background-color: rgba(255, 255, 255, 0.1);
   }
 }	
 	
@@ -3230,16 +3253,13 @@ toolbar[mode="text"] toolbarbutton.chevron > .toolbarbutton-icon {
 }
 
 #main-window[privatebrowsingmode=temporary] #navigator-toolbox[tabsontop=false] #TabsToolbar {
+  background-color: #505050;
   box-shadow: 0 -1px 0 #5D5D5D inset, 0 -2px 0 rgba(0,0,0,.28) inset;
 }
 
 #navigator-toolbox[tabsontop=false] #TabsToolbar:not(:-moz-lwtheme) {
   -moz-appearance: none;
   background-color: #F1F1F1;
-}
-
-#main-window[privatebrowsingmode=temporary] #navigator-toolbox[tabsontop=false] #TabsToolbar {
-  background-color: #505050;
 }
 
 .tabbrowser-tab:not(:-moz-lwtheme) {
@@ -3656,7 +3676,7 @@ toolbar[mode="text"] toolbarbutton.chevron > .toolbarbutton-icon {
     #main-window[sizemode=normal] #titlebar-content:not(:-moz-lwtheme),
     #titlebar-content:not(:-moz-lwtheme) {
       padding-bottom: 0;
-      box-shadow: 0 -1px 0 0 #ACB7C4, 0 -2px 0 0 #3E3F3F;
+      box-shadow: 0 -1px 0 0 #E3E3E3, 0 -2px 0 0 #3E3F3F;
     }
 	
 	#main-window:-moz-window-inactive {
@@ -3682,7 +3702,7 @@ toolbar[mode="text"] toolbarbutton.chevron > .toolbarbutton-icon {
     #main-window[privatebrowsingmode=temporary][sizemode=normal] #titlebar-content:not(:-moz-lwtheme),
     #main-window[privatebrowsingmode=temporary] #titlebar-content:not(:-moz-lwtheme) {
 		background-color: #282B2D;
-		box-shadow: 0 -1px 0 0 #8699B3, 0 -2px 0 0 #3E3F3F;
+		box-shadow: 0 -1px 0 0 #505050, 0 -2px 0 0 #3E3F3F;
     }
 	
 	#main-window[privatebrowsingmode=temporary]:-moz-window-inactive,
@@ -3693,7 +3713,7 @@ toolbar[mode="text"] toolbarbutton.chevron > .toolbarbutton-icon {
     #main-window[privatebrowsingmode=temporary][sizemode=normal]:-moz-window-inactive #titlebar-content:not(:-moz-lwtheme),
     #main-window[privatebrowsingmode=temporary]:-moz-window-inactive #titlebar-content:not(:-moz-lwtheme) {
       background-color: #383B3D;
-      box-shadow: 0 -1px 0 0 #ACB7C4, 0 -2px 0 0 #3E3F3F;
+      box-shadow: 0 -1px 0 0 #505050, 0 -2px 0 0 #3E3F3F;
     }
 
     #toolbar-menubar:not(:-moz-lwtheme),
@@ -3715,10 +3735,6 @@ toolbar[mode="text"] toolbarbutton.chevron > .toolbarbutton-icon {
       margin-top: 7px !important;
       margin-bottom: 0px !important;
     }
-	
-	#main-menubar {
-      text-shadow: 0px 0px 3px;
-   }
   }
   
   #toolbar-menubar:not([autohide=true]):not(:-moz-lwtheme),
